[package]
name = "autotiling"
version = "0.1.0"
description = "Automatically switch horizontal / vertical window split orientation in i3wm"
authors = ["timothyjin <tjin316@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitfailure = "0.5.1"
failure = "0.1.2"

[dependencies.i3ipc]
version = "0.10.1"
